# RSNA2024-LSD

./: .gitignore  LICENSE  LOGISTICS.md  README.md  format.sh  pyproject.toml  submission.csv
demos/: isic2024-demo.py
lsd/: data.py  metrics.py
lsd/demos/: isic2024-demo.py
lsd/notebooks/: test.ipynb
lsd/src/lsd/: data.py  predict.py  test.py  train.py
lsd/src/lsd/configs/: exp1.py  exp2.py
